--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My First Website</title>
+	<title>About</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -18,7 +18,22 @@
 			</ul>
 		</div>
 	</header>
-	About
+	
+	<div class="container">
+		<div class="half">
+			<img class="profile" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAtjAAAAJGU1YTE1OTkzLWQ1ODYtNDVhYi1iZDA2LWY4MjViYWM3NGQwNg.jpg">
+		</div>
+		<div class="half">
+			<h2>Christopher Taylor</h2>
+			<p>Hi it's nice to meet you!</p>
+			<h3>Hobbies</h3>
+			<ul>
+				<li>Football</li>
+				<li>Basketball</li>
+				<li>Coding</li>
+			</ul>
+		</div>
+	</div>
 	
 	<footer>
 		<a href="https://www.facebook.com/" target="_blank"><img src="img/ic_facebook.png"></a>
